Fix the wrapping issue for long trivia questions in mobile Learn and Earn

--- a/www/css/psgmobile.css
+++ b/www/css/psgmobile.css
@@ -382,7 +382,7 @@ img {
 }
 /* Trivia Answer Text */
 .trivia_answer_text{
-    display: inline-block;
+    display: inline;
     padding-left: 8px;
     padding-right: 4px;
 }
